--- a/src/cssTyylit/treeninLisays.css
+++ b/src/cssTyylit/treeninLisays.css
@@ -28,7 +28,8 @@
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: auto;
-    background-color: pink;
+    margin-right: auto;
+    background-color: rgb(243, 236, 236);
 }
 
 .tarkastelupuoli {
@@ -45,11 +46,13 @@
 }
 
 .lisaatreeni {
-    margin-top: 50%;
+    margin-top: auto;
+    margin-bottom: 20px;
 }
 
 .takasbutton {
-    margin-top: auto;
+    margin-bottom: 20px;
+    background-color: orange;
 }
 
 .otsikko {
@@ -70,3 +73,39 @@
     margin-right: 20px;
 }
 
+.lisaaSarjaBtn {
+    background-color: rgb(27, 219, 27);
+    border-radius: 50%;
+    border-style: none;
+    height: 30px;
+    width: 30px;
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.lisaaSarjaBtn:hover {
+    cursor: pointer;
+    height: 35px;
+    width: 35px;
+}
+
+.nimidiv {
+    background-color: pink;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 5px;
+    height: 30px;
+
+}
+
+.nimidiv:hover {
+    cursor: pointer;
+}
+
+
+.nimi {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 5px;
+}
