--- a/src/cssTyylit/paaSivu.css
+++ b/src/cssTyylit/paaSivu.css
@@ -54,8 +54,23 @@
 
 .treeniotsikko {
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     margin-left: 5px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.treeniliikenimi {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 10px;
+    font-weight: bold;
+}
+
+.treeniptnimet {
+    margin-top: 0;
+    margin-bottom: 5px;
+    margin-left: 15px;
 }
 
 .poistaButton {
