--- a/src/cssTyylit/treeninLisays.css
+++ b/src/cssTyylit/treeninLisays.css
@@ -45,14 +45,37 @@
     background-color: pink;
 }
 
-.lisaatreeni {
+.alarivi {
     margin-top: auto;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+}
+
+.lisaatreeni {
+    width: 80px;
+    height: 40px;
+    border-radius: 8px;
+    background-color: rgb(239, 239, 96);
+    margin-left: 10px;
+}
+
+.lisaatreeni:hover {
+    width: 88px;
+    height: 44px;
+    cursor: pointer;
 }
 
 .takasbutton {
-    margin-bottom: 20px;
     background-color: orange;
+    width: 80px;
+    height: 40px;
+    border-radius: 8px;
+    margin-left: 10px;
+}
+
+.takasbutton:hover {
+    width: 88px;
+    height: 44px;
+    cursor: pointer;
 }
 
 .otsikko {
@@ -95,8 +118,6 @@
     display: flex;
     flex-direction: row;
     margin-bottom: 5px;
-    height: 30px;
-
 }
 
 .nimidiv:hover {
@@ -105,7 +126,32 @@
 
 
 .nimi {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 7px;
     margin-left: 5px;
+    font-weight: bold;
 }
+
+.sarjaklik {
+    width: 100%;
+}
+
+.yksisarja {
+    margin-top: 0;
+    margin-bottom: 0;
+    height: 20px;
+}
+
+.yksiteksti {
+    margin-left: 10px;
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
+.ylarivi {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 30px;
+}
+
+
