--- a/src/cssTyylit/treeninLisays.css
+++ b/src/cssTyylit/treeninLisays.css
@@ -1,24 +1,8 @@
-.treeninkirjausdiv {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    min-height: 400px;
-    width: 500px;
-    border-radius: 8px;
-    background-color: rgb(243, 236, 236);
-}
-
 .paanakyma {
     display: flex;
     flex-direction: row;
 }
-
-.syotenakyma {
-    display: flex;
-    flex-direction: row;
-}
-
+/*eka näkymä alkaa*/
 .syotepuoli {
     display: flex;
     flex-direction: column;
@@ -32,63 +16,14 @@
     background-color: rgb(243, 236, 236);
 }
 
-.tarkastelupuoli {
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-    min-height: 400px;
-    border-radius: 8px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: auto;
-    margin-left: 5%;
-    background-color: pink;
-}
-
-.alarivi {
-    margin-top: auto;
-    margin-bottom: 10px;
-}
-
-.lisaatreeni {
-    width: 80px;
-    height: 40px;
-    border-radius: 8px;
-    background-color: rgb(239, 239, 96);
-    margin-left: 10px;
-}
-
-.lisaatreeni:hover {
-    width: 88px;
-    height: 44px;
-    cursor: pointer;
-}
-
-.takasbutton {
-    background-color: orange;
-    width: 80px;
-    height: 40px;
-    border-radius: 8px;
-    margin-left: 10px;
-}
-
-.takasbutton:hover {
-    width: 88px;
-    height: 44px;
-    cursor: pointer;
-}
-
-.otsikko {
-    text-align: center;
-}
-
 .yksisyotediv {
     display: flex;
 }
 
-.pee {
+.syotteenNimi {
     margin-left: 10px;
 }
+
 .inputti {
     height: 30px;
     margin-left: 5px;
@@ -124,6 +59,16 @@
     cursor: pointer;
 }
 
+.sarjaklik {
+    width: 100%;
+}
+
+.ylarivi {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 30px;
+}
 
 .nimi {
     margin-top: 7px;
@@ -131,8 +76,17 @@
     font-weight: bold;
 }
 
-.sarjaklik {
-    width: 100%;
+.poistaButtoni {
+    margin-left: auto;
+    margin-right: 5px;
+    height: 90%;
+    margin-top: 7px;
+    height: 20px;
+    font-size: 10px;
+}
+.poistaButtoni:hover {
+    cursor: pointer;
+    height: 25px;
 }
 
 .yksisarja {
@@ -147,11 +101,63 @@
     margin-bottom: 5px;
 }
 
-.ylarivi {
+.alarivi {
+    margin-top: auto;
+    margin-bottom: 10px;
+}
+
+.lisaatreeni {
+    width: 80px;
+    height: 40px;
+    border-radius: 8px;
+    background-color: rgb(239, 239, 96);
+    margin-left: 10px;
+}
+
+.lisaatreeni:hover {
+    width: 88px;
+    height: 44px;
+    cursor: pointer;
+}
+
+.takasbutton {
+    background-color: orange;
+    width: 80px;
+    height: 40px;
+    border-radius: 8px;
+    margin-left: 10px;
+}
+
+.takasbutton:hover {
+    width: 88px;
+    height: 44px;
+    cursor: pointer;
+}
+/*eka näkymä loppuu*/
+
+/*syotenakyma alkaa*/
+.syotenakyma {
     display: flex;
     flex-direction: row;
-    width: 100%;
-    height: 30px;
 }
+
+.jotain {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.inputtix {
+    width: 50px;
+    height: 20px;
+    margin-left: 5px;
+}
+
+
+
+
+
+
+
 
 
