--- a/src/cssTyylit/treeninLisays.css
+++ b/src/cssTyylit/treeninLisays.css
@@ -104,6 +104,9 @@
 .alarivi {
     margin-top: auto;
     margin-bottom: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .lisaatreeni {
@@ -145,6 +148,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-bottom: 50px;
 }
 
 .inputtix {
@@ -152,6 +156,17 @@
     height: 20px;
     margin-left: 5px;
 }
+
+.tausta {
+    background-color: pink;
+    border-radius: 8px;
+    margin-bottom: 3px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 30px;
+}
+
 
 
 
