--- a/src/cssTyylit/treeninLisays.css
+++ b/src/cssTyylit/treeninLisays.css
@@ -6,14 +6,14 @@
 .syotepuoli {
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 40%;
     min-height: 400px;
     border-radius: 8px;
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgb(243, 236, 236);
+    background: linear-gradient(to right, #feb47b, #ff7e5f);
 }
 
 .yksisyotediv {
@@ -48,11 +48,13 @@
 }
 
 .nimidiv {
-    background-color: pink;
+    background: #f0f0f0;
     border-radius: 8px;
     display: flex;
     flex-direction: row;
     margin-bottom: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .nimidiv:hover {
@@ -158,13 +160,15 @@
 }
 
 .tausta {
-    background-color: pink;
+    background: #f0f0f0;
     border-radius: 8px;
     margin-bottom: 3px;
     display: flex;
     flex-direction: row;
     align-items: center;
     height: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 
